--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kz-Official — Mini CPU-Z</title>
 
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 
   <!-- Tailwind (opsional; kalau tidak perlu, hapus baris ini) -->
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- UAParser (deteksi vendor/model/OS/browser) -->
-  <script src="./vendor/ua-parser.min.js"></script>
+  <script src="ua-parser.min.js"></script>
 
   <!-- EmailJS SDK -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
@@ -20,7 +20,7 @@
   <main class="card container">
     <header class="card__head">
       <div class="brand">
-        <img src="./images/logo.png" alt="logo" class="brand__logo" />
+        <img src="logo.png" alt="logo" class="brand__logo" />
         <h1 class="brand__title">Kz-Official — Mini CPU-Z</h1>
       </div>
       <span id="status" class="status">Menunggu persetujuan…</span>
@@ -90,9 +90,9 @@
   </div>
 
   <!-- Config terpisah -->
-  <script src="./firebase.js"></script>
-  <script src="./email.js"></script>
+  <script src="firebase.js"></script>
+  <script src="email.js"></script>
   <!-- App utama -->
-  <script src="./app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
